testns1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test1
  labels:
    role: test1
