testns2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test2
  labels:
    role: test2
