testdep1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test1
  namespace: test1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test1
      role: test1
  template:
    metadata:
      labels:
        app: test1
        role: test1
    spec:
      containers:
      - name: myweb
        image: tomcat:8.5-jre8
        ports:
        - containerPort: 80
        readinessProbe:
          exec:
            command:
            - cat
            - /tmp/healthy
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: liveness-port
          failureThreshold: 1
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /healthz
            port: liveness-port
          failureThreshold: 30
          periodSeconds: 10
