testdep3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test3
  namespace: test2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test2
      role: test2
  template:
    metadata:
      labels:
        app: test2
        role: test2
    spec:
      containers:
      - name: myweb
        image: tomcat:8.5-jre8
        ports:
        - containerPort: 80
