initpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: default
spec:
  podSelector:
    matchLabels:
  policyTypes:
