testpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: test1
spec:
  podSelector:
    matchLabels:
      role: test1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          role: test1
      podSelector:
        matchLabels:
          role: test2
    ports:
    - protocol: TCP
      port: 8080
